<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sender</string>
    <string name="title_section1">Send</string>
    <string name="title_section2">Receive</string>
    <string name="action_settings">Settings</string>
	<string name="return_number">Panic Number</string>
	<string name="secret_code">Secret Code</string>
	<string name="return_number_summary">The phone number used to receive your messages</string>
	<string name="secret_code_summary">The code used to authorize access to your location</string>
	<string name="tag_id">TagID</string>
	<string name="tag_id_summary">The unique identifier assigned to this tag</string>
	<string name="lock_code">Lock Code</string>
	<string name="lock_code_summary">The code used to prevent changes to the settings</string>
	<string name="default_lockcode">12345</string>
	<string name="default_tagid">Sender-01</string>
	<string name="default_secretcode">1234</string>
	<string name="default_returnnumber">+18775550000</string>
	<string name="app_debug">Debug</string>
	<string name="password1">Enter Password:</string>
	<string name="password2">Enter Password Again:</string>
	<string name="settings_pwd_equal">Passwords Match</string>
	<string name="settings_pwd_not_equal">Passwords Do Not Match</string>
	<string name="debug_preference">Debug</string>
	<string name="sendBtn">Send Location</string>
	<string name="panicBtnText">Panic</string>
	<string name="panicStopBtnText">Stop Panic</string>
		
	<style name="ButtonText">
   		<item name="android:layout_width">fill_parent</item>
    	<item name="android:layout_height">wrap_content</item>
    	<item name="android:textColor">#ffffff</item>
    	<item name="android:gravity">center</item>
    	<item name="android:layout_margin">1dp</item>
    	<item name="android:textSize">30sp</item>
    	<item name="android:textStyle">bold</item>
    	<item name="android:shadowColor">#000000</item>
    	<item name="android:shadowDx">1</item>
    	<item name="android:shadowDy">1</item>
    	<item name="android:shadowRadius">2</item>
	</style>
	
	<string name="default_phone">+18775550000</string>
	<string name="default_summary">Phone number to receive coordinates from</string>	
	<string name="getLocsString">Locate</string>
	<string name="tag_password_title">Tag Secret Code</string>
	<string name="tag_password_sum">The secret code set on all your tags</string>
	<string name="refreshBtnTxt">Refresh</string>
	<string name="deleteBtnTxt">Delete</string>
	
	<string name="addNewTag">Add</string>
	<string name="nullVal"></string>
	<string name="viewAllTags">View</string>
	<string name="saveUpdates">Save</string>
	<string name="mobileNumber">Mobile Number</string>
	<string name="tagNickname">Tag Nickname</string>
	<string name="tagManager">Tag Manager</string>
	<string name="myPanicNumbers">Panic Manager</string>
	<string name="mapTxt">Map</string>

	<!-- Maps With Me strings -->
	<string  name="mwm_should_be_installed">Offline maps are required to proceed. We have partnered with MapsWithMe to provide you with offline maps of the entire world.\nTo continue please download the app:</string>
    <string  name="down_lite">Download MapsWithMe Lite (free)</string>
    <string  name="down_pro">Download MapsWithMe Pro</string>
    <string  name="url_pro">http://mapswith.me/get</string>
    <string  name="url_lite">http://mapswith.me/app</string>
    
</resources>
